Move Maven to lib

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -7,3 +7,5 @@ evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
 git.version=0.0.1
+
+maven.api.url="http://search.maven.org/solrsearch"
