--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -2,3 +2,5 @@ include "base.conf"
 
 db.default.url="jdbc:postgresql://localhost/dependency"
 db.default.username=api
+
+github.api.token.file="/web/keys/services/github-mbryzek-token.txt"
