--- a/www/conf/base.conf
+++ b/www/conf/base.conf
@@ -1,4 +1,4 @@
-application.langs="en"
+play.i18n.langs=["en"]
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
 git.version=0.0.1-dev
