Layout UI for basic rendering

--- a/www/conf/base.conf
+++ b/www/conf/base.conf
@@ -1,4 +1,6 @@
 play.i18n.langs=["en"]
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
+play.modules.enabled += "com.bryzek.dependency.lib.DependencyClientProviderModule"
+
 git.version=0.0.1-dev
