--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -6,6 +6,8 @@ db.default.logStatements=true
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
-git.version=0.0.1
+play.modules.enabled += "com.bryzek.dependency.lib.UserTokenClientModule"
 
 maven.api.url="http://search.maven.org/solrsearch"
+
+git.version=0.0.1
