Rename UserTokenClient => UserTokensClient

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -6,7 +6,7 @@ db.default.logStatements=true
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
-play.modules.enabled += "com.bryzek.dependency.lib.UserTokenClientModule"
+play.modules.enabled += "com.bryzek.dependency.lib.UserTokensClientModule"
 
 maven.api.url="http://search.maven.org/solrsearch"
 
