Pass Data object into actors

--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -8,4 +8,4 @@ db.default.password=${?CONF_DB_DEFAULT_PASS}
 
 dependency.www.host=${?CONF_DEPENDENCY_WWW_HOST}
 
-github.api.token=${?CONF_GITHUB_API_TOKEN}
+github.api.token.value=${?CONF_GITHUB_API_TOKEN_VALUE}
