Add env variables for github application

--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -3,4 +3,4 @@ include "base.conf"
 db.default.url="jdbc:postgresql://localhost/dependency"
 db.default.username=api
 
-github.api.token.file="/web/keys/services/github-mbryzek-token.txt"
+github.api.token=${?CONF_GITHUB_API_TOKEN}
