--- a/www/conf/application.production.conf
+++ b/www/conf/application.production.conf
@@ -5,3 +5,6 @@ play.crypto.secret=${?CONF_APPLICATION_SECRET}
 dependency.api.token=${?CONF_SPLASHPAGE_API_TOKEN}
 dependency.api.host=${?CONF_SPLASHPAGE_API_HOST}
 dependency.www.host=${?CONF_SPLASHPAGE_WWW_HOST}
+
+github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
+github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
