--- a/www/conf/application.conf
+++ b/www/conf/application.conf
@@ -5,3 +5,6 @@ play.crypto.secret="development"
 dependency.api.token="development"
 dependency.api.host="http://localhost:8001"
 dependency.www.host="http://localhost:8000"
+
+github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
+github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
