Move github integration to API

--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -4,3 +4,5 @@ db.default.url="jdbc:postgresql://localhost/dependency"
 db.default.username=api
 
 github.api.token=${?CONF_GITHUB_API_TOKEN}
+github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
+github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
