--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -7,6 +7,7 @@ evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
 play.modules.enabled += "com.bryzek.dependency.lib.UserTokensClientModule"
+play.modules.enabled += "com.bryzek.dependency.lib.GithubModule"
 
 maven.api.url="http://search.maven.org/solrsearch"
 
