Add separate thread pool for actors

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -12,3 +12,17 @@ play.modules.enabled += "com.bryzek.dependency.lib.GithubModule"
 maven.api.url="http://search.maven.org/solrsearch"
 
 git.version=0.0.1
+
+main-actor-context {
+  fork-join-executor {
+    parallelism-factor = 5.0
+    parallelism-max = 200
+  }
+}
+
+project-actor-context {
+  fork-join-executor {
+    parallelism-factor = 2.0
+    parallelism-max = 50
+  }
+}
