--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -5,3 +5,8 @@ db.default.username=api
 
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
+
+com.bryzek.dependency.project.sync.seconds=300
+com.bryzek.dependency.project.sync.seconds_initial=45
+com.bryzek.dependency.library.sync.seconds=300
+com.bryzek.dependency.library.sync.seconds_initial=90
