--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -10,3 +10,8 @@ dependency.www.host=${?CONF_DEPENDENCY_WWW_HOST}
 
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
+
+com.bryzek.dependency.project.sync.seconds=1800
+com.bryzek.dependency.project.sync.seconds_initial=45
+com.bryzek.dependency.library.sync.seconds=3600
+com.bryzek.dependency.library.sync.seconds_initial=90
