--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -6,7 +6,9 @@ db.default.username=api
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
-com.bryzek.dependency.project.sync.seconds=300
-com.bryzek.dependency.project.sync.seconds_initial=45
+com.bryzek.dependency.binary.sync.seconds=300
+com.bryzek.dependency.binary.sync.seconds_initial=80
 com.bryzek.dependency.library.sync.seconds=300
-com.bryzek.dependency.library.sync.seconds_initial=90
+com.bryzek.dependency.library.sync.seconds_initial=60
+com.bryzek.dependency.project.sync.seconds=300
+com.bryzek.dependency.project.sync.seconds_initial=40
