Auto purge sync records after 1 week

--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -12,3 +12,4 @@ com.bryzek.dependency.library.sync.seconds=300
 com.bryzek.dependency.library.sync.seconds_initial=60
 com.bryzek.dependency.project.sync.seconds=300
 com.bryzek.dependency.project.sync.seconds_initial=40
+com.bryzek.dependency.project.purge.seconds=3600
