Restore form to manually add a project

--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -17,4 +17,4 @@ com.bryzek.dependency.library.sync.seconds=3600
 com.bryzek.dependency.library.sync.seconds_initial=90
 com.bryzek.dependency.project.sync.seconds=1800
 com.bryzek.dependency.project.sync.seconds_initial=45
-com.bryzek.dependency.project.purge.seconds=3600
+com.bryzek.dependency.purge.seconds=3600
