--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -9,7 +9,10 @@ play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "com.bryzek.dependency.lib.UserTokensClientModule"
 play.modules.enabled += "com.bryzek.dependency.lib.GithubModule"
 
-maven.api.url="http://search.maven.org/solrsearch"
+mail.subject.prefix="[dependency]"
+mail.default.from.email="mbryzek@alum.mit.edu"
+mail.default.from.name.first="Michael"
+mail.default.from.name.last="Bryzek"
 
 git.version=0.0.1
 
