--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -6,6 +6,8 @@ db.default.username=api
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
+mail.local.delivery.dir="/tmp/email.dependency"
+
 com.bryzek.dependency.binary.sync.seconds=300
 com.bryzek.dependency.binary.sync.seconds_initial=80
 com.bryzek.dependency.library.sync.seconds=300
