--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -11,10 +11,9 @@ dependency.www.host=${?CONF_DEPENDENCY_WWW_HOST}
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
+sendgrid.api.key=${?CONF_SENDGRID_API_KEY}CONF_SENDGRID_API_KEY}
+
 com.bryzek.dependency.binary.sync.seconds=3600
-com.bryzek.dependency.binary.sync.seconds_initial=90
 com.bryzek.dependency.library.sync.seconds=3600
-com.bryzek.dependency.library.sync.seconds_initial=90
 com.bryzek.dependency.project.sync.seconds=1800
-com.bryzek.dependency.project.sync.seconds_initial=45
 com.bryzek.dependency.purge.seconds=3600
