Wire up email actor

--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -8,10 +8,4 @@ github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
 mail.local.delivery.dir="/tmp/email.dependency"
 
-com.bryzek.dependency.binary.sync.seconds=300
-com.bryzek.dependency.binary.sync.seconds_initial=80
-com.bryzek.dependency.library.sync.seconds=300
-com.bryzek.dependency.library.sync.seconds_initial=60
-com.bryzek.dependency.project.sync.seconds=300
-com.bryzek.dependency.project.sync.seconds_initial=40
-com.bryzek.dependency.purge.seconds=3600
+com.bryzek.dependency.email.seconds_initial=1
