--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -14,6 +14,12 @@ mail.default.from.email="mbryzek@alum.mit.edu"
 mail.default.from.name.first="Michael"
 mail.default.from.name.last="Bryzek"
 
+com.bryzek.dependency.binary.seconds=3600
+com.bryzek.dependency.library.seconds=3600
+com.bryzek.dependency.project.seconds=1800
+com.bryzek.dependency.purge.seconds=3600
+com.bryzek.dependency.email.seconds=3600
+
 git.version=0.0.1
 
 main-actor-context {
