--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -3,6 +3,8 @@ include "base.conf"
 db.default.url="jdbc:postgresql://localhost/dependency"
 db.default.username=api
 
+dependency.www.host="http://localhost:8000"
+
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
