Add hack for rapid preview of email template

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -6,8 +6,8 @@ db.default.logStatements=true
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
-play.modules.enabled += "com.bryzek.dependency.lib.UserTokensClientModule"
-play.modules.enabled += "com.bryzek.dependency.lib.GithubModule"
+play.modules.enabled += "com.bryzek.dependency.api.lib.UserTokensClientModule"
+play.modules.enabled += "com.bryzek.dependency.api.lib.GithubModule"
 
 mail.subject.prefix="[dependency]"
 mail.default.from.email="mbryzek@alum.mit.edu"
