--- a/www/conf/base.conf
+++ b/www/conf/base.conf
@@ -1,6 +1,6 @@
 play.i18n.langs=["en"]
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
-play.modules.enabled += "com.bryzek.dependency.lib.DependencyClientProviderModule"
+play.modules.enabled += "com.bryzek.dependency.www.lib.DependencyClientProviderModule"
 
 git.version=0.0.1-dev
