Protect hack email page with configuration (which is absent in prod)

--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -12,3 +12,5 @@ mail.local.delivery.dir="/tmp/email.dependency"
 
 com.bryzek.dependency.email.seconds=1
 com.bryzek.dependency.email.seconds_initial=1
+
+com.bryzek.dependency.test.email="mbryzek@alum.mit.edu"
