Implement daily summary email to be delivered daily at 7am EST

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -18,7 +18,8 @@ com.bryzek.dependency.binary.seconds=3600
 com.bryzek.dependency.library.seconds=3600
 com.bryzek.dependency.project.seconds=1800
 com.bryzek.dependency.purge.seconds=3600
-com.bryzek.dependency.email.seconds=3600
+com.bryzek.dependency.email.seconds=900
+com.bryzek.dependency.email.daily.summary.hour.est=7
 
 git.version=0.0.1
 
