Unify parameter naming

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -14,12 +14,12 @@ mail.default.from.email="mbryzek@alum.mit.edu"
 mail.default.from.name.first="Michael"
 mail.default.from.name.last="Bryzek"
 
-com.bryzek.dependency.binary.seconds=3600
-com.bryzek.dependency.library.seconds=3600
-com.bryzek.dependency.project.seconds=1800
-com.bryzek.dependency.purge.seconds=3600
-com.bryzek.dependency.email.seconds=900
-com.bryzek.dependency.email.daily.summary.hour.est=7
+com.bryzek.dependency.api.binary.seconds=3600
+com.bryzek.dependency.api.library.seconds=3600
+com.bryzek.dependency.api.project.seconds=1800
+com.bryzek.dependency.api.purge.seconds=3600
+com.bryzek.dependency.api.email.seconds=900
+com.bryzek.dependency.api.email.daily.summary.hour.est=7
 
 git.version=0.0.1
 
