--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -10,6 +10,10 @@ github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
 mail.local.delivery.dir="/tmp/email.dependency"
 
-com.bryzek.dependency.email.seconds_initial=1
+com.bryzek.dependency.api.binary.seconds_initial=10
+com.bryzek.dependency.api.library.seconds_initial=20
+com.bryzek.dependency.api.project.seconds_initial=5
+com.bryzek.dependency.api.purge.seconds_initial=30
+com.bryzek.dependency.api.email.seconds_initial=1
 
-com.bryzek.dependency.test.email="mbryzek@alum.mit.edu"
+com.bryzek.dependency.api.test.email="mbryzek@alum.mit.edu"
