Fix bracket in prod conf

--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -11,4 +11,4 @@ dependency.www.host=${?CONF_DEPENDENCY_WWW_HOST}
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
 github.dependency.client.secret=${?CONF_GITHUB_DEPENDENCY_CLIENT_SECRET}
 
-sendgrid.api.key=${?CONF_SENDGRID_API_KEY}CONF_SENDGRID_API_KEY}
+sendgrid.api.key=${?CONF_SENDGRID_API_KEY}
