--- a/www/conf/application.production.conf
+++ b/www/conf/application.production.conf
@@ -1,6 +1,6 @@
 include "base.conf"
 
-play.crypto.secret=${?CONF_APPLICATION_SECRET}
+play.crypto.secret=${?CONF_PLAY_CRYPTO_SECRET}
 
 dependency.api.token=${?CONF_DEPENDENCY_API_TOKEN}
 dependency.api.host=${?CONF_DEPENDENCY_API_HOST}
