Implement webhooks integration with github

--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -3,6 +3,7 @@ include "base.conf"
 db.default.url="jdbc:postgresql://localhost/dependency"
 db.default.username=api
 
+dependency.api.host="http://localhost:8001"
 dependency.www.host="http://localhost:8000"
 
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_LOCALHOST_CLIENT_ID}
