--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -6,6 +6,7 @@ db.default.url=${?CONF_DB_DEFAULT_URL}
 db.default.username=api
 db.default.password=${?CONF_DB_DEFAULT_PASS}
 
+dependency.api.host=${?CONF_DEPENDENCY_API_HOST}
 dependency.www.host=${?CONF_DEPENDENCY_WWW_HOST}
 
 github.dependency.client.id=${?CONF_GITHUB_DEPENDENCY_CLIENT_ID}
