--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -1,7 +1,6 @@
 include "base.conf"
 
-db.default.url="jdbc:postgresql://localhost/dependency"
-db.default.username=api
+db.default.url="jdbc:postgresql://localhost/dependencydb"
 
 dependency.api.host="http://localhost:8001"
 dependency.www.host="http://localhost:8000"
