--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -2,6 +2,7 @@ application.langs=["en"]
 
 db.default.driver=org.postgresql.Driver
 db.default.logStatements=true
+db.default.username=api
 
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
