--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,17 @@ scala:
   - 2.11.7
 jdk:
   - oraclejdk8
-addons:
-    postgresql: "9.4"
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot/
+services:
+  - docker
 before_script:
-  - createuser -U postgres -s -d -r web
-  - createdb -h localhost -U web dependency
-  - git clone git://github.com/gilt/schema-evolution-manager.git
-  - cd schema-evolution-manager
-  - git checkout 0.9.21
-  - cd ../schema
-  - ../schema-evolution-manager/bin/sem-apply --host localhost --user web --name dependency
-  - cd ..
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker run -d -p 127.0.0.1:6119:5432 flowcommerce/dependency-postgresql:latest
+script: 
+  - sbt ++$TRAVIS_SCALA_VERSION clean compile test
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.sbt -name "*.lock" | xargs rm
+  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
