Add bindings for actors

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -10,6 +10,7 @@ play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "com.bryzek.dependency.api.lib.UserTokensClientModule"
 play.modules.enabled += "com.bryzek.dependency.api.lib.GithubModule"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
+play.modules.enabled += "com.bryzek.dependency.actors.ActorsModule"
 
 mail.subject.prefix="[dependency]"
 mail.default.from.email="mbryzek@alum.mit.edu"
