--- a/www/conf/base.conf
+++ b/www/conf/base.conf
@@ -2,5 +2,6 @@ play.i18n.langs=["en"]
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
 play.modules.enabled += "com.bryzek.dependency.www.lib.DependencyClientProviderModule"
+play.modules.enabled += "io.flow.play.clients.ConfigModule"
 
 git.version=0.0.23
