--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -7,10 +7,10 @@ db.default.username=api
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
-play.modules.enabled += "com.bryzek.dependency.api.lib.UserTokensClientModule"
-play.modules.enabled += "com.bryzek.dependency.api.lib.GithubModule"
-play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "com.bryzek.dependency.actors.ActorsModule"
+play.modules.enabled += "com.bryzek.dependency.api.lib.GithubModule"
+play.modules.enabled += "com.bryzek.dependency.api.lib.TokenClientModule"
+play.modules.enabled += "io.flow.play.clients.ConfigModule"
 
 mail.subject.prefix="[dependency]"
 mail.default.from.email="mbryzek@alum.mit.edu"
