--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,4 @@
-FROM flowdocker/play:0.0.32
+FROM flowdocker/play:0.0.37
 
 ADD . /opt/play
 
@@ -6,4 +6,6 @@ WORKDIR /opt/play
 
 RUN sbt 'project api' clean stage
 
-ENTRYPOINT ["java", "-jar", "/root/environment-provider.jar", "run", "play", "dependency", "api", "target/universal/stage/bin/dependency-api"]
+WORKDIR api/target/universal/stage
+
+ENTRYPOINT ["java", "-jar", "/root/environment-provider.jar", "--service", "play", "dependency", "bin/dependency-api"]
