--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,4 +1,4 @@
-FROM flowdocker/play:0.0.32
+FROM flowdocker/play:0.0.37
 
 ADD . /opt/play
 
@@ -6,4 +6,6 @@ WORKDIR /opt/play
 
 RUN sbt 'project www' clean stage
 
-ENTRYPOINT ["java", "-jar", "/root/environment-provider.jar", "run", "play", "dependency", "www", "target/universal/stage/bin/dependency-www"]
+WORKDIR www/target/universal/stage
+
+ENTRYPOINT ["java", "-jar", "/root/environment-provider.jar", "--service", "play", "dependency", "bin/dependency-www"]
