--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -3,8 +3,12 @@ application.langs=["en"]
 db.default.driver=org.postgresql.Driver
 db.default.logStatements=true
 db.default.username=api
-
+db.default.hikaricp.minimumIdle=2
+db.default.hikaricp.minimumIdle=${?CONF_DB_HIKARICP_MINIMUM_IDLE}
+db.default.hikaricp.maximumPoolSize=5
+db.default.hikaricp.maximumPoolSize=${?CONF_DB_HIKARICP_MAXIMUM_POOL_SIZE}
 evolutionplugin=disabled
+
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 
 play.modules.enabled += "com.bryzek.dependency.actors.ActorsModule"
