--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -1,6 +1,7 @@
 include "base.conf"
 
 db.default.url="jdbc:postgresql://localhost/dependencydb"
+db.default.url=${?CONF_DB_DEFAULT_URL}
 
 dependency.api.host="http://localhost:6111"
 dependency.www.host="http://localhost:6110"
