--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -10,6 +10,7 @@ db.default.hikaricp.maximumPoolSize=${?CONF_DB_HIKARICP_MAXIMUM_POOL_SIZE}
 evolutionplugin=disabled
 
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
+play.http.filters=io.flow.play.util.CorsWithLoggingFilter
 
 play.modules.enabled += "com.bryzek.dependency.actors.ActorsModule"
 play.modules.enabled += "com.bryzek.dependency.api.lib.GithubModule"
